* Added z-index: 99999; to .ac_results class. This should help   ensure that the results display over other HTML elements   (like those created with Thickbox.)
git-svn-id: http://jqueryjs.googlecode.com/svn/trunk@2249 c715fcbe-d12f-0410-84c4-316a508785bb

--- a/plugins/autocomplete/jquery.autocomplete.css
+++ b/plugins/autocomplete/jquery.autocomplete.css
@@ -3,6 +3,7 @@
 	border: 1px solid WindowFrame;
 	background-color: Window;
 	overflow: hidden;
+	z-index: 99999;
 }
 
 .ac_results ul {
